Fix #418, cr=243 Company logo is being stretched

--- a/public/rsrcs/css/social.css
+++ b/public/rsrcs/css/social.css
@@ -213,12 +213,14 @@ a:hover, a:active, a:focus {
     padding: 2px 2px 2px;
 }
 #sitelogo {
-    height: 35px;
-    width: 300px;
     margin-left: 10px;
     float: left;
-    text-overflow: ellipsis;
     overflow: hidden;
+}
+#sitelogo-img {
+    max-height: 35px;
+    max-width: 300px;
+    border:none;
 }
 #sitename {
     padding-top: 6px;
